:bug: Fix flex children subgrid gap

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
@@ -21,6 +21,7 @@
 
 .flex-element-menu {
   @include sidebar.option-grid-structure;
+  gap: var(--sp-xs);
 }
 
 .behaviour-menu {
